--- a/index.html
+++ b/index.html
@@ -16,138 +16,176 @@
 <body style="background-color: #F0D9FF;">
     <!-- Home screen container start -->
     <div id="homesn" class="container-fluid row min-vh-100">
-    <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
+        <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
         <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-center title">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="gameStart(), sound(1)">Play</button>
-                    <button onclick="sound(2)" class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;">Info</button>    
+                    <button class="btn mx-1 btn-light btn-lg"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;"
+                        onclick="gameStart(), sound(1)">Play</button>
+                    <button onclick="sound(2)" class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;">Info</button>
 
                     <!-- Modal -->
-                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                    <div class="modal-header" style="background-color: #c7acda;">
-                        <h1 class="modal-title fs-5" id="staticBackdropLabel" ><b>Information</b></h1>
-                        <button onclick="sound(3)" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
+                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header" style="background-color: #c7acda;">
+                                    <h1 class="modal-title fs-5" id="staticBackdropLabel"><b>Information</b></h1>
+                                    <button onclick="sound(3)" type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
                                 <div class="modal-body" style="background-color: #F0D9FF;">
                                     <p>
                                         <b>Welcome to MathMate!</b> - a game for entertainment and knowledge!
                                     </p>
-                                   <li>
-                                    To start the game click the <b>"Play"</b> button.
-                                   </li>
-                                   <br>
-                                   <li>
-                                    On the game scene you have a keypad with numbers and a mathematical problem. The type of the problem can be modified by the buttons with mathematical operations. <b>You will have 5 problems to solve.</b>
-                                   </li>
-                                   <br>
-                                   <li>
-                                    Answer the problem with the keypad and then press the button <b>"Enter"</b>.
-                                   </li>
-                                   <br>
-                                   <li>
-                                    You can click the <b>"Clear"</b> button to erase your wrong answer.
+                                    <li>
+                                        To start the game click the <b>"Play"</b> button.
                                     </li>
                                     <br>
                                     <li>
-                                        When you answer all problems, the end scene will show to give you the results. Then you can choose to play again or start on the next level of difficulty.
+                                        On the game scene you have a keypad with numbers and a mathematical problem. The
+                                        type of the problem can be modified by the buttons with mathematical operations.
+                                        <b>You will have 5 problems to solve.</b>
+                                    </li>
+                                    <br>
+                                    <li>
+                                        Answer the problem with the keypad and then press the button <b>"Enter"</b>.
+                                    </li>
+                                    <br>
+                                    <li>
+                                        You can click the <b>"Clear"</b> button to erase your wrong answer.
+                                    </li>
+                                    <br>
+                                    <li>
+                                        When you answer all problems, the end scene will show to give you the results.
+                                        Then you can choose to play again or start on the next level of difficulty.
                                     </li>
                                 </div>
                             </div>
                         </div>
-                    <!-- End Modal -->                              
+                        <!-- End Modal -->
+                    </div>
+                </div>
+                <div
+                    class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
+                    <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
                 </div>
             </div>
-            <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
-                <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;"/>
-            </div>
         </div>
-    </div>
     </div>
     <!-- Home screen container end -->
 
     <!-- Game screen container start-->
     <div id="gamesn" class="container-fluid d-none">
-    <!-- <div id="gamesn" class="container-fluid d-none"> -->
+        <!-- <div id="gamesn" class="container-fluid d-none"> -->
         <div class="row min-vh-100 flex-column ">
             <div class="flex-row">
-                <button onclick="back()" class="col mx-1 btn btn-lg btnstl" class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
+                <button onclick="back()" class="col mx-1 btn btn-lg btnstl" class="btn mx-1 btn-light btn-lg"
+                    style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
             </div>
-                <div class="row flex-column flex-sm-row align-items-center justify-content-center">
-                    <div class="col d-flex flex-column align-items-center">
-                        <div>
-                            <h1 class="title">MathMate</h1>
-                        </div>            
-                    <div>
+            <div class="row flex-column flex-sm-row align-items-center justify-content-center">
+                <div class="col d-flex flex-column align-items-center">
+                    <div class="col d-flex flex-column">
+                        <h1 class="title">MathMate</h1>
+                    </div>
+                    <div class="border border-primary rounded">
                         <div class="input-group mb-3">
                             <div id="task" class="input-group-text">
                                 ㅤ
                             </div>
-                            <input id="userInput" type="number" class="form-control" placeholder="Your answer" aria-label="Answer" aria-describedby="button-addon2">
-                        </div>
-                    </div>
-                    <div class="col d-flex flex-row">
-                        <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="one">1</button>
-                         umeros(9), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="nine">9</button>
-                            <button onclick="division(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="ten">/</button>
+                            <input id="userInput" type="number" class="form-control" placeholder="Your answer"
+                                aria-label="Answer" aria-describedby="button-addon2">
                         </div>
                         <div class="col d-flex flex-row">
-                            <button onclick = "clearInput(), sound(1)" class="col-5 mx-1 btn btn-danger btn-lg btn3d btnstl">Clear</button>
-                            <button onclick = "numeros(0), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">0</button>
-                            <button onclick = "multiplication(1), sound(1)"class="col mx-1 btn btn-primary btn-lg btn3d btnstl">*</button>
+                            <button onclick="numeros(1), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="one">1</button>
+                            <button onclick="numeros(2), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="two">2</button>
+                            <button onclick="numeros(3), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="three">3</button>
+                            <button onclick="plus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="plus">+</button>
                         </div>
                         <div class="col d-flex flex-row">
-                            <button onclick="checkAnswer(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Enter</button>
+                            <button onclick="numeros(4), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="four">4</button>
+                            <button onclick="numeros(5), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="five">5</button>
+                            <button onclick="numeros(6), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="six">6</button>
+                            <button onclick="minus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="minus">-</button>
                         </div>
                         <div class="col d-flex flex-row">
-                            <button onclick="backspace(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Backspace</button>
-                        <butto   <button onclick="numeros(2), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="two">2</button>
-                        <button onclick="numeros(3), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="three">3</button>
-                        <button onclick="plus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="plus">+</button>
+                            <button onclick="numeros(7), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="seven">7</button>
+                            <button onclick="numeros(8), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="eight">8</button>
+                            <button onclick="numeros(9), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="nine">9</button>
+                            <button onclick="division(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="ten">/</button>
+                        </div>
+                        <div class="col d-flex flex-row">
+                            <button onclick="clearInput(), sound(1)"
+                                class="col-5 mx-1 btn btn-danger btn-lg btn3d btnstl">Clear</button>
+                            <button onclick="numeros(0), sound(1)"
+                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">0</button>
+                            <button onclick="multiplication(1), sound(1)"
+                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">*</button>
+                        </div>
+                        <div class="col d-flex flex-row">
+                            <button onclick="checkAnswer(), sound(1)"
+                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Enter</button>
+                        </div>
+                        <div class="col d-flex flex-row">
+                            <button onclick="backspace(), sound(1)"
+                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Backspace</button>
+                            <button id="levelButton" onclick="sound(1), levelSwitch()"
+                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Level</button>
+                        </div>
                     </div>
-                    <div class="col d-flex flex-row">
-                        <button onclick="numeros(4), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="four">4</button>
-                        <button onclick="numeros(5), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="five">5</button>
-                        <button onclick="numeros(6), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="six">6</button>
-                        <button onclick="minus(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="minus">-</button>
-                    </div>
-                    <div class="col d-flex flex-row">
-                        <button onclick="numeros(7), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="seven">7</button>
-                        <button onclick="numeros(8), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="eight">8</button>
-                        <button onclick="nn" id="levelButton" onclick="sound(1), levelSwitch()" class="col mx-1 btn btn-primary btn-lg btn3d btnstl">Level</button>                        </div>
-                    </div>
-                </div>
                 </div>
                 <div class="col d-flex flex-column align-items-center">
-                    <div>
-                        <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;"/>
+                        <div>
+                            <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
+                        </div>
                     </div>
-                </div>
             </div>
-        </div>  
+        </div>
     </div>
-</div>
     <!-- Game screen container end-->
 
     <!-- End screen container start-->
-        <div id="endsn" class="d-none">
-            <div class="row min-vh-100 flex-column align-items-center justify-content-center">
-                <div class="d-flex flex-column align-items-center">
-                    <h4 id="result" style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">Result: 2/5</h4>
-                    <div class="flex-row">
-                        <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="playAgain(), sound(1)">Play again</button>
-                        <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="levelSwitch(), sound(1), gameStart()">Next level</button>
-                        <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="homeMenu()">Home menu</button>
-                    </div>
-                </div>
-                <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
-                    <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;"/>
+    <div id="endsn" class="d-none">
+        <div class="row min-vh-100 flex-column align-items-center justify-content-center">
+            <div class="d-flex flex-column align-items-center">
+                <h4 id="result"
+                    style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;">
+                    Result: 2/5</h4>
+                <div class="flex-row">
+                    <button class="btn mx-1 btn-light btn-lg"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;"
+                        onclick="playAgain(), sound(1)">Play again</button>
+                    <button class="btn mx-1 btn-light btn-lg"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF"
+                        onclick="levelSwitch(), sound(1), gameStart()">Next level</button>
+                    <button class="btn mx-1 btn-light btn-lg"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF"
+                        onclick="homeMenu()">Home menu</button>
                 </div>
             </div>
+            <div
+                class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
+                <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
+            </div>
         </div>
+    </div>
     <!-- End screen container end -->
-    </body>
+</body>
+
 </html>
