--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
 <body style="background-color: #F0D9FF;">
     <!-- Home screen container start -->
     <div id="homesn" class="container-fluid min-vh-100 align-items-center justify-content-center d-flex">
-    <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
+        <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
         <div class="d-flex row flex-column flex-lg-row align-items-center justify-content-center">
             <div class="d-flex flex-column align-items-center justify-content-center">
                 <h1 class="text-center title">MathMate</h1>
                 <div class="d-flex flex-row align-items-center justify-content-center">
-                    <button class="btn mx-1 btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="gameStart(), sound(1)">Play</button>
-                    <button class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;" onclick="sound(2)">Info</button>    
+                    <button class="btn mx-1 btn-light btn-lg"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;"
+                        onclick="gameStart(), sound(1)">Play</button>
+                    <button class="btn mx-1 btn-light btn-lg" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; width: 25vw; margin-top: 5px; color: #F0D9FF; font-size: 20px;"
+                        onclick="sound(2)">Info</button>
 
                     <!-- Modal -->
                     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
@@ -66,12 +70,11 @@
                         <!-- End Modal -->
                     </div>
                 </div>
-                <div
-                    class="d-flex col-8 align-self-center justify-content-center">
+                <div class="d-flex col-8 align-self-center justify-content-center">
                     <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
                 </div>
             </div>
-            
+
         </div>
     </div>
     <!-- Home screen container end -->
@@ -79,13 +82,14 @@
     <!-- Game screen container start-->
     <div id="gamesn" class="container-fluid d-none">
         <!-- <div id="gamesn" class="container-fluid d-none"> -->
-            <div class="row min-vh-100 flex-column justify-content-center align-items-center">
+        <div class="row min-vh-100 flex-column justify-content-center align-items-center">
             <div class="flex-row pt-2 fixed-top">
                 <div class="d-flex mb-2 justify-content-between align-items-center">
                     <button onclick="back()" class="mx-1 p-2 btn btn-lg btnstl"
                         style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
                     <button id="soundButton" onclick="soundTurn(), sound(1)" class="mx-1 p-2 btn btn-lg btnstl"
-                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Sound: ON</button>
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Sound:
+                        ON</button>
                 </div>
             </div>
             <div class="d-flex justify-content-center">
@@ -93,9 +97,11 @@
             </div>
             <div class="d-flex flex-column flex-sm-row align-items-center justify-content-center">
                 <div class="col d-flex flex-column justify-content-center">
-                    <div class="p-2 shadow rounded align-self-center justify-content-center mw-50" style="background-color: #9876c9;">
+                    <div class="p-2 shadow rounded align-self-center justify-content-center mw-50"
+                        style="background-color: #9876c9;">
                         <div class="input-group mb-3 shadow-sm">
-                            <span id="task" class="input-group-text px-2 justify-content-center btnstl" style="width: 22vw;"></span>
+                            <span id="task" class="input-group-text px-2 justify-content-center btnstl"
+                                style="width: 22vw;"></span>
                             <input id="userInput" type="number" class="form-control btnstl" placeholder="Your answer"
                                 aria-label="Answer" aria-describedby="button-addon2">
                         </div>
@@ -163,19 +169,38 @@
     <div id="endsn" class="d-none">
         <div class="container d-flex min-vh-100 flex-column align-items-center justify-content-center">
             <div class="row align-items-center justify-content-center">
-                <h4 id="result" style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;" class="col-6">Result: 2/5</h4>
+                <h4 id="result"
+                    style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;"
+                    class="col-6">Result: 2/5</h4>
                 <div class="row flex-md-row flex-column align-items-center">
-                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg" style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;" onclick="sound(1), gameStart()" id="playAgainButton">Play again</button>
-                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="sound(1), nextLevelF()" id="nextLevelButton">Next level</button>
-                    <button class=" col-xs-9 mx-md-1 col btn btn-light btn-lg " style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF" onclick="homeMenu()">Home menu</button>
+                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;"
+                        onclick="sound(1), gameStart()" id="playAgainButton">Play again</button>
+                    <button class=" col-xs-9 mx-md-1 col btn  btn-light btn-lg "
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF"
+                        onclick="sound(1), nextLevelF()" id="nextLevelButton">Next level</button>
+                    <button class=" col-xs-9 mx-md-1 col btn btn-light btn-lg "
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px;color: #F0D9FF"
+                        onclick="homeMenu()">Home menu</button>
                 </div>
             </div>
-            <div class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
-                <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;"/>
+            <div
+                class="d-flex col-8 col-xs-7 col-sm-6 col-md-5 col-lg-4 col-xl-3 align-self-center justify-content-center">
+                <img class="img-fluid" src="./images/mate.png" alt="emoji" style="margin-top: 40px;" />
             </div>
         </div>
     </div>
     <!-- End screen container end -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5EETVGYWLS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-5EETVGYWLS');
+    </script>
+
 </body>
 
 </html>
