--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <button onclick="numeros(9), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
                                 id="9">9</button>
                             <button onclick="division(), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
-                                id="/">/</button>
+                                id="/">÷</button>
                         </div>
                         <div class="d-flex">
                             <button onclick="clearInput(), sound(1)"
@@ -141,15 +141,15 @@
                             <button onclick="numeros(0), sound(1)"
                                 class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="0">0</button>
                             <button onclick="multiplication(1), sound(1)"
-                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="*">*</button>
+                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="*">×</button>
                         </div>
                         <div class="d-flex">
                             <button onclick="checkAnswer(), sound(1)"
-                                class="col mx-1 btn btn-danger btn-lg btn3d btnstl" id="enter">Enter</button>
+                                class="col mx-1 btn btn-danger btn-lg btn3d btnstl" id="Enter">Enter</button>
                         </div>
                         <div class="d-flex">
                             <button onclick="backspace(), sound(1)"
-                                class="col mx-1 btn btn-success btn-lg btn3d btnstl" id="backspace">Backspace</button>
+                                class="col mx-1 btn btn-success btn-lg btn3d btnstl" id="Backspace">Backspace</button>
                             <button id="levelButton" onclick="sound(1), levelSwitch()"
                                 class="col mx-1 btn btn-success btn-lg btn3d btnstl">Level</button>
                         </div>
