--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@
     <!-- End screen container start-->
     <div id="endsn" class="d-none">
         <div class="container d-flex min-vh-100 flex-column align-items-center justify-content-center">
+            <div class="row pt-2">
+                <div class="d-flex mb-2 justify-content-between align-items-center">
+                    <button onclick="back()" class="mx-1 p-2 btn btn-lg btnstl"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Back</button>
+                    <button id="soundButton" onclick="soundTurn(), sound(1)" class="mx-1 p-2 btn btn-lg btnstl"
+                        style="background-color: #a17ed2; border: 2px solid #6e609f; margin-top: 5px; color: #F0D9FF;">Sound:
+                        ON</button>
+                </div>
+            </div>
             <div class="row align-items-center justify-content-center">
                 <h4 id="result"
                     style="border: solid 3px #6e609f; border-radius: 15px; padding: 5px; padding-left: 15px; padding-right: 15px; text-align: center;"
