--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </div>
                         <div class="d-flex">
                             <button onclick="clearInput(), sound(1)"
-                                class="col-5 mx-1 btn btn-success btn-lg btn3d btnstl" id="f">Clear</button>
+                                class="col-5 mx-1 btn btn-success btn-lg btn3d btnstl" id="c">Clear</button>
                             <button onclick="numeros(0), sound(1)"
                                 class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="0">0</button>
                             <button onclick="multiplication(1), sound(1)"
@@ -150,7 +150,7 @@
                         <div class="d-flex">
                             <button onclick="backspace(), sound(1)"
                                 class="col mx-1 btn btn-success btn-lg btn3d btnstl" id="Backspace">Backspace</button>
-                            <button id="levelButton" onclick="sound(1), levelSwitch()"
+                            <button id="f" onclick="sound(1), levelSwitch()"
                                 class="col mx-1 btn btn-success btn-lg btn3d btnstl">Level</button>
                         </div>
                     </div>
