--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                         <div class="d-flex">
                             <button onclick="clearInput(), sound(1)"
                                 class="col-5 mx-1 btn btn-success btn-lg btn3d btnstl" id="c">Clear</button>
-                            <button onclick="numeros(0), sound(1)"
-                                class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="0">0</button>
+                            <button onclick="numeros(0), sound(1)" class="col mx-1 btn btn-primary btn-lg btn3d btnstl"
+                                id="0">0</button>
                             <button onclick="multiplication(1), sound(1)"
                                 class="col mx-1 btn btn-primary btn-lg btn3d btnstl" id="*">×</button>
                         </div>
@@ -148,8 +148,8 @@
                                 class="col mx-1 btn btn-danger btn-lg btn3d btnstl" id="Enter">Enter</button>
                         </div>
                         <div class="d-flex">
-                            <button onclick="backspace(), sound(1)"
-                                class="col mx-1 btn btn-success btn-lg btn3d btnstl" id="Backspace">Backspace</button>
+                            <button onclick="backspace(), sound(1)" class="col mx-1 btn btn-success btn-lg btn3d btnstl"
+                                id="Backspace">Backspace</button>
                             <button id="f" onclick="sound(1), levelSwitch()"
                                 class="col mx-1 btn btn-success btn-lg btn3d btnstl">Level</button>
                         </div>
