--- a/index.html
+++ b/index.html
@@ -145,7 +145,14 @@
               <button id="f" onclick="sound(1), levelSwitch()"
                 class="col mx-1 btn btn-success btn-lg btn3d btnstl">Level</button>
             </div>
+            
           </div>
+          <div class="pt-2">
+              <div class="progress">
+                <div id="progressP" class="progress-bar-animated bg-success" role="progressbar" style="width: 0%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="progressN" class="progress-bar-animated bg-danger" role="progressbar" style="width: 0%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
         </div>
         <div class="col d-flex flex-column align-items-center">
           <div>
