--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- <div id="homesn" class="container-fluid row min-vh-100"> -->
     <div class="d-flex row flex-column flex-lg-row align-items-center justify-content-center">
       <div class="d-flex flex-column align-items-center justify-content-center">
-        <h1 class="text-center title">MathMate</h1>
+        <img class="img-fluid" src="images/Untitled_Artwork.png" alt="emoji"/>
         <div class="d-flex flex-row align-items-center justify-content-center">
           <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" onclick="gameStart(), sound(1)">Play</button>
           <button class="btn mx-1 mt-1 btn-light btn-lg startbtn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" onclick="sound(2)">Info</button>
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <h1 class="title">MathMate</h1>
+        <img class="" src="images/Untitled_Artwork.png" alt="emoji"/>
       </div>
       <div class="d-flex flex-column flex-sm-row align-items-center justify-content-center">
         <div class="col d-flex flex-column justify-content-center">
